--- a/paper-data-platforms.qmd
+++ b/paper-data-platforms.qmd
@@ -68,10 +68,10 @@ author:
 
         
 abstract: |
-  This document is only a demo explaining how to use the template.
-keywords: [template, demo]
+  TO DO: add abstract.
+keywords: [Analytics-on-FHIR, SQL-on-FHIR, HIE, data platforms, LMICs, digital health]
 reference-section-title: References
-bibliography: pharmaccess.bib  
+bibliography: pharmaccess.bib
 ---
 
 ## Introduction {#sec-intro}
@@ -90,7 +90,7 @@ Particularly relevant in the context of health data platforms (HDPs), is the con
 
 This paper is motivated by the conflation of a number of developments relevant to the design and implementation of solidarity-based HDPs in LMICs. First, the OpenHIE framework [@openhie] has been adopted by many sub-Saharan African countries [@mamuye2022health] as the architectural blueprint for implementing nation-wide health information exchanges (HIE), including Nigeria [@ohienigeria], Kenya [@khisif] and Tanzania [@tzhea2020]. These countries have, as a matter of course, extended the framework to include “analytics services” as an additional domain. The rationale for this addition is to facilitate primary and secondary re-use of health data for academic research, real-world evidence studies etc. which can be framed within the context of ongoing efforts towards Findable, Accessible, Interoperable and Reusable (FAIR) sharing of health data [@guillot2023fair]. In doing so, however, we have implicitly moved from conceptualizing digital health platforms (the original OpenHIE specification) to health data platforms. This is problematic because the notion of openness, which is assumed to be essential in establishing solidarity-based approaches to data sharing, is inherently different for a data platform compared to a digital platform.
 
-Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods[@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for data sharing and re-use. Distinguishing four types of data sharing (@tbl-types-data-sharing), the purpose of this paper is to investigate how new standards and technologies that can establish openness of health data platforms can be integrated into the OpenHIE architecture framework. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs.
+Conceptually, the OpenHIE framework constitutes a framework for an open digital platform. Openness for digital platforms refers to i) the use of open boundary resources, that is, specifications for the various healthcare specific workflows and information standards such as FHIR; and ii) the use of open source components that are available as digital public goods[@digitalpublicgoods]. If we are to use the OpenHIE framework as an open data platform, we need to extend the standards, technologies and architecture to include functionality for data sharing and re-use. Distinguishing four types of data sharing (@tbl-types-data-sharing), the purpose of this paper is to investigate how new standards and technologies that can establish openness of health data platforms can be integrated into the OpenHIE architecture framework. The lack of detailed specifications and consensus of this addition to OpenHIE currently stands in the way of development projects that aim to establish HDPs in LMICs. In addition, we explicitly address the requirement of downward scalability as we aim to implement health data platforms in resource constrained setting of LMICs. 
 
 |   | __Type of data sharing__ | __New standards and technology enablers to create openness__ |
 |:-:|:-------|:-------------|
@@ -103,34 +103,14 @@ Conceptually, the OpenHIE framework constitutes a framework for an open digital 
 
 ## Methods
 
-In the paper, we present a design that extends the OpenHIE specification to include the four types of data sharing mentioned above. Using the full-STAC approach [@mehl2023fullstac] we combine open standards, open technologies and open architectures into a coherent modular HDP platform that can be configured and re-used across a variety of use-cases. Subsequently, we employ the Framework for Evaluation of Design Science (FEDS) research [@venable2016feds] to evaluate the design. The purpose of this evaluation is formative: we aim to to help improve the outcomes of the design and the artifacts presented. We do so by taking a naturalistic approach, that is, the expected performance of the design is considered with its real environment where we draw on our experience in two use-cases, namely the Momcare programme and the ONA Canopy data platform.
+In the paper, we present a design that extends the OpenHIE specification to include the four types of data sharing mentioned above. Using the full-STAC approach [@mehl2023fullstac] we combine open standards, open technologies and open architectures into a coherent modular HDP platform that can be configured and re-used across a variety of use-cases. Subsequently, we employ a formative, naturalistic evaluation to assess the technical risk and efficacy of the design [@venable2016feds]. Given that it is prohibitively expensive to evaluate with real users and real systems in the real setting, we aim to minimize technological risks and maximize the efficacy of the design by considering three real-world examples of health data platoform in LMICs, namely i) the OpenHIM platform ([https://jembi.gitbook.io/openhim-platform/](https://jembi.gitbook.io/openhim-platform/)); ii) the ONA Canopy platform [https://ona.io/home/services/canopy/](https://ona.io/home/services/canopy/); and iii) the MomCare platform ([https://health-data-commons.pharmaccess.org](https://health-data-commons.pharmaccess.org). As part of our design research, we have taken a narrative approach in surveying existing scientific studies on health data platforms, focusing on the seminal reports and subsequently searching forward citations. In addition, we have searched the open source repositories (most notably GitHub) and the online communities (OpenHIE community, FHIR community) to search for relevant open standards, technologies and architectures. This paper should not be considered as a proper systematic review.
 
-As part of our design research, we have taken a narrative approach in surveying existing scientific studies on health data platforms, focusing on the seminal reports and subsequently searching forward citations. In addition, we have searched the open source repositories (most notably GitHub) and the online communities (OpenHIE community, FHIR community) to search for relevant open standards, technologies and architectures. This paper should not be considered as a proper systematic review.
 
-### Momcare
-
-MomCare was launched in Kenya [@huisman2022digital;@sanctis2022maintaining] and Tanzania [@shija2021access;@mrema2021application] in 2017 and 2019 respectively, with the objective to create transparency on the journeys of pregnant mothers. The programme is built on three pillars: journey tracking, quality support and a mobile wallet (@fig-momcare). MomCare distinguishes two user groups: mothers are supported during their pregnancy through reminders and surveys, using SMS as the digital mode of engagement. Health workers are equipped with an Android-based application, in which visits, care activities and clinical observations are recorded. Reimbursements of the maternal clinic are based on the data captured with SMS and the app, thereby creating a conditional payment scheme, where providers are partially reimbursed up-front for a fixed bundle of activities, supplemented by bonus payments based on a predefined set of care activities.
-
-![Overview of the Momcare programme](images/momcare.png){width=auto #fig-momcare}
-
-### Use-case: ONA Canopy
-
-https://ona.io/home/services/canopy/
-
-### Evaluation of other reported HDP designs
-
-Besides the two case studies, we will discuss how the design relates to other reported open architectures
-
-- Ayaz et al. presented an end-to-end framework that automates the mapping from FHIR Resources to FHIR-compliant tables that are subsequently exposed for consumption [@ayaz2023transforming]
-- Mullie et al. presented the CODA project that aims to facilitate distributed computations for multi-institutional data analysis while avoiding the costs and complexity of data pooling [@mullie2023coda]
-- PHAS [@abbasian2023phas]
-- OpenHIM platform with analytics
-
-## Results
+## Design
 
 ### Open standards: using FHIR as the common data model
 
-The recent convergence to FHIR as the de facto standard for information exchange has fuelled the development of OpenHIE. FHIR is currently used both for routine healthcare settings[ @ayaz2021fast] and clinical research settings [@duda2022hl7;@vorisek2022fast] and is increasingly being used in LMICs as well. The FHIR-native OpenSRP platform [@mehl2020open] has been deployed in 14 countries targeting various patient populations, amongst which a reference implementation of the WHO antenatal and neonatal care guidelines for midwives in Lombok, Indonesia [@summitinstitutefordevelopment2023bunda;@kurniawan2019midwife]. In India, FHIR is used as the underlying technology for the open Health Claims Exchange protocol specification, which has been adopted by the Indian government as the standard for e-claims handling [@hcx]. Additionally, the guidelines and standards of the African Union explicitly state FHIR is to be used as the messaging standard [@2023african]. This range of utilizations showcase the standards’ widespread applicability. The proceedings of the OpenHIE conference 2023 attest to the fact that FHIR and open source technologies are embraced as critical enablers in implementing health information exchanges in LMICs [@ohie23].
+The recent convergence to FHIR as the de facto standard for information exchange has fuelled the development of OpenHIE. FHIR is currently used both for routine healthcare settings[ @ayaz2021fast] and clinical research settings [@duda2022hl7;@vorisek2022fast] and is increasingly being used in LMICs as well. The guidelines and standards of the African Union explicitly state FHIR is to be used as the messaging standard [@2023african]. The FHIR-native OpenSRP platform [@mehl2020open] has been deployed in 14 countries targeting various patient populations, amongst which a reference implementation of the WHO antenatal and neonatal care guidelines for midwives in Lombok, Indonesia [@summitinstitutefordevelopment2023bunda;@kurniawan2019midwife]. In India, FHIR is used as the underlying technology for the open Health Claims Exchange protocol specification, which has been adopted by the Indian government as the standard for e-claims handling [@hcx]. This range of utilizations showcase the standards’ widespread applicability. The proceedings of the OpenHIE conference 2023 attest to the fact that FHIR and open source technologies are embraced as critical enablers in implementing health information exchanges in LMICs [@ohie23].
 
 However, despite the increased use of FHIR as a common data model, various studies have investigated its merits and performance vis-a-vis other healthcare standards. Comparisons between OpenEHR, ISO 13606, OMOP and FHIR have been made [@ayaz2023transforming;@mullie2023coda;@rinaldi2021openehr;@cremonesi2023need;@sinaci2023data]. A study involving 10 experts comparing OpenEHR, ISO 13606 and FHIR concluded that i) these three standards are functionally and technically compatible, and therefore can be used side by side; and that ii) each of these standards have their strengths and limitations that correlate with their intended use as summarized in the @tbl-comparison.
 
@@ -141,9 +121,12 @@ For an infectious diseases dataset with a limited scope, OpenEHR, OMOP and FHIR 
 Although FHIR was originally designed only for exchange between systems, we propose to use it as the common data model for the design presented here for the following reasons:
 
 - Industry adoption has significantly increased, as exemplified by FHIR-based offering by major cloud providers such as Google, Azure and AWS. Also, Africa CDC has explicitly chosen FHIR as the preferred standard;
+- The widespread availibility of the Bulk FHIR API [@mandl2020push;@jones2021landscape] enables bulk, fileb-based nbatchwise processing for analytics using the lakehouse architecture as detailed in the next section;
 - The concept of FHIR Profiles allow localisation to tailor the standard to a specific use case. A profile defines rules, extensions, and constraints for a resource. We posit that the possible penalty of this flexibility, namely having to manage different FHIR versions and/or profiles, is less of an issue in the context of LMICs where first priority is to exchange datasets such as the International Patient Summary (IPS) that are less complex compared to the requirements for high income countries;
 - Being based on webstandards, the FHIR standard lends itself best for further separation of concerns as envisioned by the composable data stack. This is an important enabler for the downward scalability of the solution;
 - With its inherent, graph-like nature, FHIR can be readily incorporated into the principles of FAIR data sharing, where FHIR-based data repositories can be integrated in an overarching netwerk of FAIR data stations [@sinaci2023data;@pedrera-jimenez2023can].
+
+Possible risks pertaining to the use of FHIR as the common data model, most notably the possible incompatibilities and/or high costs of maintenance in supporting different versions, will be addressed in the Discussion.
 
 ### Open architecture: extending OpenHIE framework with a lakehouse data platform
 
@@ -157,7 +140,12 @@ While the lakehouse architecture separates the concerns of compute and storage, 
 
 ![Examples of implementations of the composable data stack](images/composable-data-stack-implementation.png){#fig-cds-examples}
 
-### Extended OpenHIE framework
+The premise of separating the user interface from the execution engine is directly related to the key objective of the SQL-on-FHIR project ([https://build.fhir.org/ig/FHIR/sql-on-fhir-v2/](https://build.fhir.org/ig/FHIR/sql-on-fhir-v2/)), namely to make large-scale analysis of FHIR data accessible to a larger audience, portable between systems and to make FHIR data work well with the best available analytic tools, regardless of the technology stack. However, as FHIR is represented as a graph of resources, with detailed semantics defined for references between resources, data types, terminology, extensions, and many other aspects of the specification; to use FHIR effectively analysts require a thorough understanding of the specification. Most analytic and machine learning use cases require the preparation of FHIR data using transformations and tabular projections from its original form. The task of authoring these transformations and projections is not trivial and there is currently no standard mechanisms to support reuse.
+
+The solution of the SQL-on-FHIR project is to provide a specification for defining tabular, use case-specific views of FHIR data. The view definition and the execution of the view are separated, in such a way that the definition is portable across systems while the execution engine (called runners) are system-specific tools or libraries that apply view definitions to the underlying data layer, optionally making use of annotations to optimize performance.
+
+
+
 Our proposal for extending HIE is as follows.
 
 - add diagram, explicitly adding the component
@@ -165,6 +153,8 @@ Our proposal for extending HIE is as follows.
 - check which workflows are related to analytics
 
 Following Hai we take a subset of the core functionalities of a data lake. Because the SHR is the key source, don’t need full stack of ingestion of various sources.
+
+![](./images/hie.png)
 
 - Query-driven data discovery
 
@@ -178,15 +168,27 @@ Many components of the OpenHIE specification are now available as a digital publ
 ![ Overview of current open source implementations of components included in the OpenHIE specification that are FHIR-compatible. The category Analytics Services is not a part of the original OpenHIE and is discussed in the paper. Point-of-Service systems are excluded for brevity. A systematic review of such digital public goods is beyond the scope of this document.](images/digital-public-goods.png){#tbl-digital-public-goods}
 
 
+## Evaluation
 
-### Evaluation: Momcare programme
+### OpenHIM platform
+
+- View generation in different packages, not portable
+  - Logstash for bulk
+  - Kafka for streaming
+
+- 
+
+### ONA Canopy
+
+### Momcare programme
+
+MomCare was launched in Kenya [@huisman2022digital;@sanctis2022maintaining] and Tanzania [@shija2021access;@mrema2021application] in 2017 and 2019 respectively, with the objective to create transparency on the journeys of pregnant mothers. The programme is built on three pillars: journey tracking, quality support and a mobile wallet (@fig-momcare). MomCare distinguishes two user groups: mothers are supported during their pregnancy through reminders and surveys, using SMS as the digital mode of engagement. Health workers are equipped with an Android-based application, in which visits, care activities and clinical observations are recorded. Reimbursements of the maternal clinic are based on the data captured with SMS and the app, thereby creating a conditional payment scheme, where providers are partially reimbursed up-front for a fixed bundle of activities, supplemented by bonus payments based on a predefined set of care activities.
+
+![Overview of the Momcare programme](images/momcare.png){width=auto #fig-momcare}
 
 
 
-### Evaluation: ONA Canopy
 
-
-### Evaluation: reported HDP solutions
 
 ## Discussion
 
@@ -217,6 +219,7 @@ Requirements are similar, but implementation differs: Datamodel is non-FHIR, foc
 
 ### Attribute-based access control
 
+- TO DO: if you have generated flattened SQL tables, how are you going to manage security?
 - Cerbos, attribute based on lineage or anonymized tables
 
 ## Abbreviations
