--- a/index.tex
+++ b/index.tex
@@ -231,8 +231,8 @@ platforms \sep LMICs \sep
     
 \section{Introduction}\label{sec-intro}
 
-\subsection{Digital platforms vs.~data platforms for
-healthcare}\label{digital-platforms-vs.-data-platforms-for-healthcare}
+\subsection{The paradox of open for digital vs.~data platforms in
+healthcare}\label{the-paradox-of-open-for-digital-vs.-data-platforms-in-healthcare}
 
 It is a widely held belief that digital technologies have an important
 role to play in strengthening health systems in low- and middle income
@@ -491,9 +491,9 @@ here for the following reasons:
   standard;
 \item
   The widespread availibility of the Bulk FHIR API
-  \citep{mandl2020push, jones2021landscape} enables bulk, fileb-based
-  nbatchwise processing for analytics using the lakehouse architecture
-  as detailed in the next section;
+  \citep{mandl2020push, jones2021landscape} enables bulk, file-based
+  batchwise processing for analytics using the lakehouse architecture as
+  detailed in the next section;
 \item
   The concept of FHIR Profiles allow localisation to tailor the standard
   to a specific use case. A profile defines rules, extensions, and
