--- a/index.qmd
+++ b/index.qmd
@@ -77,7 +77,7 @@ bibliography: pharmaccess.bib
 
 ## Introduction {#sec-intro}
 
-### Digital platforms vs. data platforms for healthcare
+### The paradox of open for digital vs. data platforms in healthcare
 
 It is a widely held belief that digital technologies have an important role to play in strengthening health systems in low- and middle income countries (LMICs), as exemplified by the WHO global strategy on digital health [@who2021global]. The adoption rate of mobile phones in LMICs has been an important driver in implementing digital health solutions [@mccool2022mobile]. Yet, there are many shortcomings and challenges, including the current fragmentation of digital platforms and the lack of clear-cut pathways of scaling up digital health programmes, such that they can support sustainable and equitable change of national health systems in LMICs [@mccool2022mobile;@who2019recommendations;@neumark2021digital].
 
@@ -122,7 +122,7 @@ For an infectious diseases dataset with a limited scope, OpenEHR, OMOP and FHIR 
 Although FHIR was originally designed only for exchange between systems, we propose to use it as the common data model for the design presented here for the following reasons:
 
 - Industry adoption has significantly increased, as exemplified by FHIR-based offering by major cloud providers such as Google, Azure and AWS. Also, Africa CDC has explicitly chosen FHIR as the preferred standard;
-- The widespread availibility of the Bulk FHIR API [@mandl2020push;@jones2021landscape] enables bulk, fileb-based nbatchwise processing for analytics using the lakehouse architecture as detailed in the next section;
+- The widespread availibility of the Bulk FHIR API [@mandl2020push;@jones2021landscape] enables bulk, file-based batchwise processing for analytics using the lakehouse architecture as detailed in the next section;
 - The concept of FHIR Profiles allow localisation to tailor the standard to a specific use case. A profile defines rules, extensions, and constraints for a resource. We posit that the possible penalty of this flexibility, namely having to manage different FHIR versions and/or profiles, is less of an issue in the context of LMICs where first priority is to exchange datasets such as the International Patient Summary (IPS) that are less complex compared to the requirements for high income countries;
 - Being based on webstandards, the FHIR standard lends itself best for further separation of concerns as envisioned by the composable data stack. This is an important enabler for the downward scalability of the solution;
 - With its inherent, graph-like nature, FHIR can be readily incorporated into the principles of FAIR data sharing, where FHIR-based data repositories can be integrated in an overarching netwerk of FAIR data stations [@sinaci2023data;@pedrera-jimenez2023can].
